--- a/wp-content/plugins/progress-plugin/public/css/progress-plugin-public.css
+++ b/wp-content/plugins/progress-plugin/public/css/progress-plugin-public.css
@@ -16,7 +16,7 @@
 	position: absolute;
 	width: 0%;
 	height: 100%;
-	background-color: #000;
+	background-color: rgb(0, 0, 0);
 	transition: all 200ms linear;
 }
 .twt_btn{
